--- a/sprogroup_purchase_request/static/description/index.html
+++ b/sprogroup_purchase_request/static/description/index.html
@@ -4,7 +4,7 @@
         <h3 class="oe_slogan">Manage Purchase request process from departments of company</h3>
         <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="1.png" height="350">
+                <img src="1.PNG" height="350">
             </div>
         </div>
     </div>
@@ -16,7 +16,7 @@
         <h3 class="oe_slogan">Design, clearly form for user input data</h3>
         <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="2.png" height="350">
+                <img src="2.PNG" height="350">
             </div>
         </div>
     </div>
@@ -26,7 +26,7 @@
         <h3 class="oe_slogan">Request from user to their leader and then to purchase manager. Leader or purchase manager can reject request whenever</h3>
         <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="3.png" height="350">
+                <img src="3.PNG" height="350">
             </div>
         </div>
     </div>
@@ -37,7 +37,7 @@
         <h3 class="oe_slogan">By clicking button "New Quotation", new form will be opened to create new quotation</h3>
         <div class="oe_span12">
             <div class="oe_demo oe_picture oe_screenshot">
-                <img src="5.png" height="350">
+                <img src="5.PNG" height="350">
             </div>
         </div>
     </div>
