--- a/sprogroup_purchase_request/static/description/index.html
+++ b/sprogroup_purchase_request/static/description/index.html
@@ -41,6 +41,16 @@
             </div>
         </div>
     </div>
+
+    <div class="oe_row oe_spaced">
+        <h2 class="oe_slogan" style="color:#875A7B;">How to use</h2>
+        <h3 class="oe_slogan">After installing, you have to set user to corresponding group</h3>
+        <div class="oe_span12">
+            <div class="oe_demo oe_picture oe_screenshot">
+                <img src="6.PNG" height="350">
+            </div>
+        </div>
+    </div>
 </section>
 
 
